pull out isContract
Signed-off-by: georgi-l95 <glazarov95@gmail.com>

fix code smells

Signed-off-by: georgi-l95 <glazarov95@gmail.com>